Fix form display issue in login.css by updating container styles

--- a/login.css
+++ b/login.css
@@ -487,3 +487,7 @@ body .hl_login--body {
 .hl_login--body .container-fluid form {
     width: 100% !important;
 }
+
+.hl_login--body .container-fluid {
+    display: unset !important;
+}
