Update container display property in login.css for improved alignment

--- a/login.css
+++ b/login.css
@@ -86,7 +86,7 @@ body .hl_login--body {
 }
 
 .hl_login--body .container-fluid {
-    /* display: flex; */
+    display: unset !important;
     align-items: left;
     justify-content: left;
     text-align: left;
