--- a/login.css
+++ b/login.css
@@ -146,7 +146,7 @@ body .hl_login--body {
 .hl_login--body .card .card-body input {
     background: var(--pmg-login-style-a-input-bg) !important;
     border: 1px solid var(--pmg-login-style-a-input-border) !important;
-    padding: 15px 20px !important;
+    padding: unset !important;
     border-radius: 3px !important;
     font-size: 14px;
     line-height: 20px;
