Remove testing note from 2FA updates comment in login.css for clarity

--- a/login.css
+++ b/login.css
@@ -1,5 +1,5 @@
 /************************************************/
-/* New Login - 2FA Updates included file testing *************/
+/* New Login - 2FA Updates included file *************/
 /************************************************/
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
